--- a/style.css
+++ b/style.css
@@ -37,8 +37,32 @@ font-family: "Josefin Slab", serif;
   font-size: 40px;
   height: 270px;
 }
+/* First Slide */
+
+.most-colorful{
+  height: 567px;
+  background: linear-gradient(180deg, rgba(27, 29, 83, 1) 0%, rgba(197, 3, 24, 1) 100%);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+.most-colorful .colorful-top, .colorful-bottom{
+  font-family: "Josefin Slab", serif;
+  font-size: 60px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.most-colorful .colorful-middle{
+  font-family: "Notable", sans-serif;
+  font-size: 120px;
+}
 
 /* BIG MAIN SLIDE */
+
 
 .slide-1{
   background-image: linear-gradient(#EBCC5D, #853517);
@@ -190,6 +214,52 @@ font-family: "Josefin Slab", serif;
    .slide-5:hover .selection-description-mini{
   bottom: 0;
 }
+
+/* SECRET SLOGAN SECTION */
+
+.secret-slogan {
+  height: 570px;
+  background-image: url(/img/bg-secret.png);
+  color: #FFD600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.secret-slogan .secret-top{
+  font-family: "Josefin Slab", serif;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: 5px 5px 5px #000;
+}
+
+.secret-slogan .secret-bottom{
+  font-family: "Notable", sans-serif;
+  font-size: 120px;
+  text-shadow: 5px 5px 5px #000;
+}
+
+/* SECRET DESCRIPTION */
+
+.secret-description {
+  height: 220px;
+  background-color: #FFD600;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+}
+
+.description-text {
+  font-family: "Josefin Slab", serif;
+  font-size: 30px;
+  width: 883px;
+}
+
 /* SUPPLIERS */
 .suppliers{
   height: 320px;
@@ -198,6 +268,7 @@ font-family: "Josefin Slab", serif;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   flex-direction: column;
 }
 .suppliers .top{
@@ -228,6 +299,7 @@ font-family: "Josefin Slab", serif;
 .ingredient-9 img{
   width: 386px;
   height: 386px;
+  object-fit: cover;
 }
 
 .ingredient-slogan{
@@ -284,3 +356,89 @@ font-family: "Josefin Slab", serif;
 .ingredient-9:hover .ingredient-description{
   top: 0;
 }
+
+/* BOOK TOUR SECTION */
+
+.book-title {
+  color: #FFF500;
+  font-size: 50px;
+}
+
+.book-slogan {
+  color: #FFF500;
+  font-size: 30px;
+  margin-bottom: 40px;
+}
+
+.book-tour {
+  color: #FFF500;
+  background: linear-gradient(180deg, rgba(27, 29, 83, 1) 0%, rgba(197, 3, 24, 1) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 1000px;
+}
+
+.form-container {
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  justify-content: center;
+  align-items: center;
+ }
+
+ .contact-group {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px;
+  place-items: center;
+  width: 100%;
+  grid-template-columns: 1fr 1fr;
+ }
+
+ .contact-box {
+  display: grid;
+  border: 4px solid #86642C;
+  border-radius: 10px;
+  width: 300px;
+  padding: 5%;
+  margin: 5%;
+ }
+
+ .contact-label {
+  margin-bottom: 5%;
+  font-size: 25px;
+ }
+ .contact-box input, textarea {
+  font-size: 20px;
+  color:#000000;
+ }
+ .contact-input {
+  padding: 8px;
+  border: 3px solid #000000;
+  border-radius: 10px;
+  width: 100%;
+  font-size: 16px;
+  background-color: #C0A276;
+}
+
+ .location-option {
+    grid-row: 4;
+ }
+
+ .location {
+  padding: 8px;
+  border: 3px solid #000000;
+  border-radius: 10px;
+  width: 150px;
+  font-size: 16px;
+  background-color: #C0A276;
+  font-family: 'Yeseva One', serif;
+ }
+
+ .contact-button {
+  width: 40%;
+  margin: 2% auto;
+  font-family: 'Yeseva One', serif;
+  margin-bottom: 10%
+ }
