--- a/style.css
+++ b/style.css
@@ -507,3 +507,52 @@ input:-webkit-autofill{
   padding: 10px;
   margin-top: 40px;
 }
+
+/* FOOTER */
+
+.main-footer {
+  background-color: #034EA2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 200px;
+  color: #ffffff;
+  font-family: "Josefin Slab", serif;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.social-list {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: center;
+  margin-right: 70px;
+}
+
+.social-list img {
+  margin-left: 10px;
+}
+
+
+.copyright {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyright p {
+  margin-top: 20px;
+}
+
+.copyright img {
+  height: 141px;
+  width: 141px;
+  margin-top: -140px;
+}
+
+.email {
+  margin-left: 70px;
+}
